--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 #Data Source Properties
 
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/bookshop?useSSL=false
+spring.datasource.url = jdbc:mysql://6.tcp.eu.ngrok.io:15071/bookshop?useSSL=false
 spring.datasource.username = root
 spring.datasource.password = 11111111
 
 #JPA Properties
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql = TRUE
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create
 
 ###Logging Levels
 # Disable the default loggers
