--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,15 @@
 #Data Source Properties
 
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://6.tcp.eu.ngrok.io:15071/bookshop?useSSL=false
+spring.datasource.url = jdbc:mysql://localhost:3306/bookshop?useSSL=false
+#:mysql://6.tcp.eu.ngrok.io:15071/bookshop?useSSL=false
 spring.datasource.username = root
 spring.datasource.password = 11111111
 
 #JPA Properties
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql = TRUE
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 
 ###Logging Levels
 # Disable the default loggers
@@ -18,3 +19,4 @@ logging.level.blog = WARN
 #Show SQL executed with parameter bindings
 logging.level.org.hibernate.SQL = DEBUG
 logging.level.org.hibernate.type.descriptor = TRACE
+
